--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: car_dealer_phase_5_production
-  username: car_dealer_phase_5
-  password: <%= ENV["CAR_DEALER_PHASE_5_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
