--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "libphonenumber-js": "^1.10.15",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.13",
     "react-router-dom": "^6.4.5",
