--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "libphonenumber-js": "^1.10.15",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.9",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.13",
