--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.1.1",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "libphonenumber-js": "^1.10.15",
