--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@stripe/react-stripe-js": "^1.16.1",
     "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,12 +19,15 @@
     "react-currency-input-field": "^3.6.9",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-phone-number-input": "^3.2.13",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-stripe-checkout": "^2.6.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "throttle-debounce": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
